swagger document now generates properly
