# public/swagger/openapi.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Inventory management system API",
+        "title": "Inventory management system APYY",
         "description": "Inventory web based system for tracking items and stuff in company",
         "version": "1.0.0"
     },
@@ -91,6 +91,38 @@
                     },
                     "401": {
                         "description": "Wrong credentials"
+                    }
+                }
+            }
+        },
+        "/api/Users/SendPasswordResetEmail": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "operationId": "472049dd1c27800522e32238265930eb",
+                "requestBody": {
+                    "description": "Provide user email",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "example@email.com"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not found"
                     }
                 }
             }
